2007-06-14  Vincent Untz  <vuntz@gnome.org>

	* calendar-window.c: make more code depend on libecal. Should fix
	compilation issues. Fix bug #443788

2007-06-14  Vincent Untz  <vuntz@gnome.org>

	* calendar-sources.c: (backend_died_cb): use g_timeout_add_seconds()

==================== 2.19.3 ====================

2007-05-25  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am: remove old code handling icons, and directly use the
	e-d-s icons
	* calendar-window.c: (set_renderer_pixbuf_pixmap): new
	(set_renderer_pixbuf_pixmap_for_bday): change path for icons, and use
	set_renderer_pixbuf_pixmap()
	(set_renderer_pixbuf_pixmap_for_weather): ditto
	(calendar_window_tree_selection_changed), (create_task_list),
	(create_list_for_appointment_model), (create_appointment_list),
	(create_birthday_list), (create_weather_list),
	(calendar_window_init): simplify the code to have only one selection

2007-05-21  Sebastien Bacher  <seb128@ubuntu.com>

	* calendar-client.c: (calendar_client_foreach_appointment_day):
	mark multiple days events correctly (Closes: #440184)

2007-05-21  Vincent Untz  <vuntz@gnome.org>

	* calendar-window.c: (calendar_window_tree_selection_changed): new,
	unselect the selection in other treeviews than the newly selected one
	(create_task_list): connect to the selection changed signal
	(create_list_for_appointment_model): ditto
	(create_appointment_list): updated
	(create_birthday_list): ditto
	(create_weather_list): ditto

2007-05-21  Vincent Untz  <vuntz@gnome.org>

	* calendar-window.c: (format_time): don't check that the time format
	is CLOCK_FORMAT_12 or CLOCK_FORMAT_24 and just assume it is.
	(calendar_window_class_init): initialize time format with
	clock_locale_format()
	(calendar_window_set_time_format): if new time format is not
	CLOCK_FORMAT_12 or CLOCK_FORMAT_24, then set it with
	clock_locale_format()

2007-05-21  Vincent Untz  <vuntz@gnome.org>

	Move the calendar popup code in a new file.